--- a/GruntfileSPA/GruntfileSPA.csproj
+++ b/GruntfileSPA/GruntfileSPA.csproj
@@ -59,6 +59,9 @@
   <ItemGroup>
     <None Include="css\views\contact.scss" />
     <None Include="css\views\home.scss" />
+    <Content Include="css\app.css" />
+    <Content Include="css\views\contact.css" />
+    <Content Include="css\views\home.css" />
     <Content Include="main.html" />
     <Content Include="r.js" />
     <Content Include="package.json" />
