--- a/GulpfileSPA/GulpfileSPA.csproj
+++ b/GulpfileSPA/GulpfileSPA.csproj
@@ -11,8 +11,8 @@
     <ProjectTypeGuids>{349c5851-65df-11da-9384-00065b846f21};{fae04ec0-301f-11d3-bf4b-00c04f79efbc}</ProjectTypeGuids>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>GruntfileSPA</RootNamespace>
-    <AssemblyName>GruntfileSPA</AssemblyName>
+    <RootNamespace>GulpfileSPA</RootNamespace>
+    <AssemblyName>GulpfileSPA</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <UseIISExpress>true</UseIISExpress>
     <IISExpressSSLPort />
@@ -59,6 +59,7 @@
   <ItemGroup>
     <None Include="css\views\contact.scss" />
     <None Include="css\views\home.scss" />
+    <Content Include="gulpfile.js" />
     <Content Include="main.html" />
     <Content Include="r.js" />
     <Content Include="package.json" />
@@ -70,7 +71,6 @@
     </None>
   </ItemGroup>
   <ItemGroup>
-    <Content Include="gruntfile.js" />
     <Content Include="scripts\app\main.js" />
     <Content Include="scripts\app\routers\router.js" />
     <Content Include="scripts\app\views\contact.js" />
