--- a/GulpfileSPA/package.json
+++ b/GulpfileSPA/package.json
@@ -16,6 +16,7 @@
     "gulp-requirejs-optimize": "^0.1.3",
     "gulp-sass": "^2.0.0",
     "gulp-uglify": "^1.2.0",
+    "gulp-watch": "^4.2.4",
     "jquery": "^2.1.4",
     "underscore": "^1.8.3"
   }
