--- a/.gitignore
+++ b/.gitignore
@@ -1,14 +1,2 @@
-# Build and Release Folders
-GulpfileSPA/.sass-cache
-GulpfileSPA/bin
-GulpfileSPA/node_modules
-GulpfileSPA/obj
-GulpfileSPA/css/build
-GulpfileSPA/scripts/build
-
-# Other files and folders
-.settings/
-
-# Project files, i.e. `.project`, `.actionScriptProperties` and `.flexProperties`
-# should NOT be excluded as they contain compiler settings and other important
-# information for Eclipse / Flash Builder.
+node_modules/
+.DS_Store
