--- a/package.json
+++ b/package.json
@@ -8,18 +8,22 @@
   },
   "keywords": [
     "Gulp",
+    "RequireJs",
+    "AMD",
     "Project",
     "SPA"
   ],
   "main": "gulpfile.js",
   "scripts": {},
   "author": "Ion D. Filho",
-  "license": "ISC",
+  "license": "MIT",
   "devDependencies": {
     "backbone": "^1.2.3",
-    "gulp": "^3.9.0",
+    "browser-sync": "^2.11.1",
+    "gulp": "^3.9.1",
     "gulp-concat": "^2.6.0",
     "gulp-concat-css": "^2.2.0",
+    "gulp-copy": "0.0.2",
     "gulp-cssmin": "^0.1.7",
     "gulp-requirejs": "^0.1.3",
     "gulp-requirejs-optimize": "^0.3.0",
@@ -27,7 +31,6 @@
     "gulp-uglify": "^1.5.1",
     "gulp-util": "^3.0.7",
     "gulp-watch": "^4.3.5",
-    "gulp-webserver": "^0.9.1",
     "jquery": "^2.1.4",
     "orchestrator": "^0.3.7",
     "underscore": "^1.8.3"
