--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,6 +1,5 @@
 init:
   - git config --global core.autocrlf true
-# What combinations to test
 environment:
   matrix:
     - nodejs_version: "4.2.2"
@@ -13,11 +12,7 @@ install:
   - npm install gulp -g
   - npm install
 test_script:
-  # Output useful info for debugging.
-  - node --version && npm --version
-  # We test multiple Windows shells because of prior stdout buffering issues
-  # filed against Grunt. https://github.com/joyent/node/issues/3584  
-  - gulp prod
+  - npm test
 build: off
 matrix:
   fast_finish: true
